--- a/WorkingWithRazor/WorkingWithRazor/WorkingWithRazor.csproj
+++ b/WorkingWithRazor/WorkingWithRazor/WorkingWithRazor.csproj
@@ -120,6 +120,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Shared\MyPartial.cshtml" />
+    <Content Include="Views\Common\List.cshtml" />
+    <Content Include="Views\Home\List.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
